[package]
name = "btleplug_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.0"
thiserror = "1.0.43"
tokio = { version="1.29.1", features = ["rt-multi-thread"] }
uuid = "1.4.0"
jni = "0.19.0"
once_cell = "1.18.0"
futures = "0.3.28"
jni-utils = "0.1.1"
