[package]
name = "blec"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "simple cross-platform ble client library based on btleplug"
homepage = "https://github.com/MnlPhlp/blec"
repository = "https://github.com/MnlPhlp/blec"
keywords = ["ble", "client", "cross-platform","btleplug","simple"]
categories = ["asynchronous","os","api-bindings"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.0"
thiserror = "1.0.43"
tokio = { version="1.29.1", features = ["rt-multi-thread"] }
uuid = "1.4.0"
jni = "0.19.0"
once_cell = "1.18.0"
futures = "0.3.28"
jni-utils = "0.1.1"
log = "0.4.19"
